<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="widget_name">SoundWave</string>
    <string name="widget_description">Play, pause and skip the current track from your home screen.</string>
    <string name="widget_idle">Nothing playing</string>
    <string name="widget_play">Play</string>
    <string name="widget_previous">Previous</string>
    <string name="widget_next">Next</string>
</resources>
